--- a/partners/templates/joinus.html
+++ b/partners/templates/joinus.html
@@ -2,18 +2,20 @@
 <section class='box-section'>
   <h1>Scegli la tua partnership</h1>
   <p>
- Partecipa ai nostri programmi di partnership, un modo per ottenere visibilit&agrave; e garantire le tue competenze. Attraverso le nostre partnership puoi fornire servizi professionali nel settore che più ti compete e garantire la qualità della tua formazione in aula. 
+ Se nel tuo lavoro Il Software Libero è un compagno irrinunciabile, aderisci subito ai nostri programmi di partnership, accresci la tua visibilità e dai fiducia ai tuoi futuri clienti.
+
+
   </p>
 
   <h3>Corsi Linux Certificati</h3>
   <p>
-      Certifica con LPI i tuoi corsi professionali per Amministratore di Sistema, garantisci qualit&agrave; ai tuoi studenti, renditi visibile attraverso il sito ufficiale del pi&uacute; importante ente di certificazione professionale in ambito Linux al mondo.
-
+Con le nostre partnership dedicate alla formazione (ATP) potrai valorizzare i tuoi Corsi professionali ed introduttivi, dedicati ai privati o alle aziende, consolidando la tua posizione o diventando punto di riferimento per la tua zona.
   </p>
 
   <h3>Servizi e soluzioni</h3>
   <p>
-        Certifica la tua azienda con LPI, garantisci la qualità di Servizi e Soluzioni, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale del Linux Professional Institute.
+Con le partnership dedicate alle aziende che offrono servizi e  soluzioni, (CSP) puoi valorizzare le tue competenze sulle più diffuse tecnologie FLOSS, facendoti trovare dalle persone giuste.
+Dai visibilità alla tua organizzazione partecipando alla comunità di professionisti Linux più grande al mondo, iscriviti subito all'unico portale in Italia quotidianamente aggiornato e verificato.dedicato al Software Libero. 
   </p>
   </section>
   </div>
@@ -25,10 +27,11 @@
       <div class='prtn-box-inner'>
         <h4>Approved Training Partner (LPI ATP)</h4>
         <p>
-          Programma di Certificazione Corsi Linux dedicato dedicato ad aziende, agenzie formative, associazione, Pubbliche Amministrazioni, organizzazioni.
+          Il Programma ATP (Approved Training Partner) incrementa la visibilità dei centri di formazione ed agenzie formative e la qualità dei loro percorsi formativi attraverso l’uso di materiale didattico selezionato, docenti certificati e l’adesione al 
+          <a href='http://www.lpi.org/partnerships/training-partners'>codice etico LPI</a>.
         </p>
         <div class='prtn-box-button-offers'>
-          <a class='button' href='#offers/training-company'>Offerta per le aziende</a>
+          <a class='button' href='#offers/training-company'>Offerta per agenzie formative</a>
         </div>
       </div>
     </li>
@@ -37,7 +40,8 @@
       <div class='prtn-box-inner'>
         <h4>Approved Academic Partner (LPI AAP)</h4>
         <p>
-          Programma di Certificazione Corsi Linux  dedicato dedicato a scuole ed universit&agrave;.
+          Se sei una scuola superiore o  un'Università e ti piacerebbe insegnare l'uso di GNU/Linux ai tuoi studenti puoi diventare nostro partner aderendo al programma AAP (Approved Academic Partner) dedicato alle strutture didattiche pubbliche.
+Grazie ai nostri programmi di supporto ti seguiremo lungo tutto il percorso, dalla formazione dei docenti al reperimento del materiale didattico, dal supporto tecnico allo svolgimento degli esami di certificazione presso la tua sede.
         </p>
         
         <div class='prtn-box-button-offers'>
@@ -52,17 +56,15 @@
 
     <li class='prtn-box col-sm-6 csp-joinus'>
       <div class='prtn-box-inner'>
-        <h4>Proposte per le societ&agrave; di servizi (LPI CSP)</h4>
+        <h4>Certified Service Solutions (LPI CSP)</h4>
         <p>
-          Il programma di certificazione di Servizi e Soluzioni &egrave; dedicata ad 
-          aziende e professionisti. Con un controllo da parte del nostro staff e le 
-          recensioni dei tuoi clienti, puoi dimostrare la tua competenza, esperienza e 
-          professionalità a nuovi potenziali clienti.
+          Il programma Csp e' dedicato alle aziende che offrono consulenza, servizi e soluzioni basati su tecnologie FLOSS.
+          Incrementiamo la visibilità' dei tuoi servizi, evidenziamo le tue competenze specifiche, verifichiamo le tue referenze, promuoviamo il tuo core business attraverso la prima banca dati italiana, costantemente<br> aggiornata, dedicata al Software Libero.
         </p>
            <a href='http://nuovo.lpi-italia.org/faq/'>Domande frequenti</a>
         <div class='prtn-box-button-offers'>
            <a class='button' href='#offers/service-company'>
-              Offerta Servizi e Soluzioni</a>
+              Offerte per aziende</a>
         </div>
       </div>
     </li>
@@ -71,11 +73,12 @@
       <div class='prtn-box-inner'>
         <h4>Certified Trainer (LPI CT)</h4>
         <p>
-          Programma  di Certificazione Corsi Linux dedicato dedicato ai professionisti.
+          Programma di Certificazione per Docenti Linux dedicato ai professionisti della formazione.
+Il programma è rivolto a docenti esperti che insegnano come Amministrare sistemi GNU/Linux e che desiderano mostrare la loro esperienza mettendo le proprie competenze a disposizione del circuito dei partner LPI.
         </p>
 
         <div class='prtn-box-button-offers'>
-          <a class='button'  href="#offers/personal-teacher">Offerta per professionisti</a>
+          <a class='button'  href="#offers/personal-teacher">Offerta per docenti</a>
         </div>
       </div>
     </li>
