--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -338,17 +338,17 @@
             <li>Profilo su LPI Italia Partners</li>
             <li>Possiblità di svolgere esami LE in sede*</li>
             <li>Sconto sugli Esami LE</li>
-            <li>Inclusa 1 Location</li>
-            <li>4 Post sulla pagina Facebook di LPI Italia</li>
-            <li>Presenza Premium del corso Linux Essentials su piattaforma EMAGISTER</li>
+            <li>Inclusa 1 Location (50&euro;/anno per location aggiuntive)</li>
+            <li>Post sulla pagina Facebook di LPI Italia (max 4)</li>
           </ul>
 
           <h4>Requisiti</h4>
           <ul>
+            <li>Riconoscersi nel Codice Etico</li>
             <li>1 docente certificato LPI Linux Essentials</li>
             <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
-            <li>Connessione ad Intenrnet</li>
-            <li>Riconoscersi nel Codice Etico</li>
+            <li>Connessione ad Internet</li>
+            <li>Pagamento della partnership con carta di credito</li>
           </ul>
         </div>
         <div  class='prtn-box-button-cont'>
@@ -380,19 +380,19 @@
               <li>Accesso alla banca dati di Docenti Certificati (LCT) di LPI Italia</li>
               <li>Possiblità di svolgere esami LE in sede*</li>
               <li>Incluse 2 Location</li>
-              <li>4 Post sulla pagina Facebook di LPI Italia</li>
+              <li>Post sulla pagina Facebook di LPI Italia (max 4)</li>
               <li>Presenza Premium del corso Linux Essentials su piattaforma EMAGISTER</li>
               <li>2 articoli/anno nella  newsletter mensile di LPI Italia</li>
-              <li>Presenza a SMAU Milano: distribuzione materiali e inviti VIP</li>
+              <li>Presenza dei materiali ed inviti VIP a SMAU Milano</li>
               <li>Accesso ai servizi di Assistenza tecnica su tecnologie Software Libero**</li>
             </ul>
             
             <h4>Requisiti</h4>
             <ul>
+              <li>Riconoscersi nel Codice Etico</li>
               <li>1 docente certificato LPI Linux Essentials</li>
               <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
               <li>Connessione ad Intenrnet</li>
-              <li>Riconoscersi nel Codice Etico</li>
             </ul>
         </div>
         <div  class='prtn-box-button-cont'>
@@ -402,7 +402,10 @@
       </div>
     </li>
   </ul>
-  
+  <div>
+    *per svolgere esami LPIC in sede è necessario essere accreditati come Test Center Pearson VUE<br>
+    ** Il servizio di Assistenza Tecnica ai docenti sarà attivato successivamente
+  </div>
   </div>
 </div>
 
@@ -418,7 +421,7 @@
   <div class="row">
     <ul class='prtn-box-container'>
       <li class='prtn-box col-sm-6'>
-        <div class='prtn-box-inner' style='height:800px'>
+        <div class='prtn-box-inner' style='height:870px'>
           <h3>Linux Essentials Academic<br> PARTNER</h3>
           <div class='prtn-box-icon'>
             <img src='{% static "lpi/lpi-aap-le.png" %}'>
@@ -435,13 +438,15 @@
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
                 <li>Profilo su LPI Italia Partners</li>
+                <li>Esame per certificare il docente gratuito*</li>
                 <li>Sconto su esami LE</li>
                 <li>Possibilit&agrave; svolgere esami*</li>
+                <li>Accesso al materiale didattico (inglese) su piattaforma Cisco Netspace</li>
             </ul>
             <br />
             <h4>Requisiti</h4>
             <ul class='prtn-box-bonus-list'>
-                <li>Almeno 1 docente certificato Linux Essentials</li>
+                <li>1 Docente Linux ( da certificare entro il primo anno)</li>
                 <li>1 Aula attrezzata con Linux (uno per studente)</li>
             </ul>
 
@@ -455,7 +460,7 @@
       </li>
 
       <li class='prtn-box col-sm-6'>
-        <div class='prtn-box-inner' style='height:800px'>
+        <div class='prtn-box-inner' style='height:870px'>
           <h3>Linux Professionals Academic <br>PARTNER</h3>
           <div class='prtn-box-icon'>
             <img src='{% static "lpi/lpi-aap-pro.png" %}'>
@@ -492,6 +497,11 @@
         </div>
       </li>
     </ul>
+
+  </div>
+
+  <div>
+    * Alla conclusione del primo corso il docente potra' svolgere l'esame gratuitamente
   </div>
   <div class="row" style='padding-top:30px'>
     <ul>
@@ -508,23 +518,24 @@
             IVA esclusa
           </div>
           <div class='prtn-box-desc'>
-            Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
+            Dedicato ai partner Linux Essentials che richiedono servizi aggiuntivi per l'avvio del corso.
+            Servizi di supporto alla didattica formiti da ITHUM
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
-                <li>Fast Start: 6 mesi per certificare il tuo docente</li>
                 <li>Sconto su esami LE</li>
                 <li>Profilo su LPI Italia Partners</li>
-                <li>Assistenza tecnica telefonica/mail</li>
-                <li>Corso Fast Track per docenti</li>
+                <li>Esame per certificare il docente gratuito*</li>
                 <li>Possibilit&agrave; svolgere esami*</li>
-                <li>1 Voucher per svolgere l'esame Linux Essentials Incluso*</li>
+                <li>Accesso al materiale didattico (inglese) su piattaforma Cisco Netspace</li>
+                <li>Assistenza didattica telefonica ed email ai docenti</li>
+                <li>Corso Fast Track</li>
 
             </ul>
             <br />
             <h4>Requisiti</h4>
             <ul class='prtn-box-bonus-list'>
-                <li>Almeno 1 docente certificato Linux Essentials</li>
+                <li>1 Aula informatica attrezzata</li>
                 <li>1 Aula attrezzata con Linux (uno per studente)</li>
             </ul>
 
@@ -550,7 +561,10 @@
             IVA esclusa
           </div>
           <div class='prtn-box-desc'>
-            Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
+            Dedicato ai partner Linux Essentials che richiedono servizi aggiuntivi per l'avvio del corso.
+Servizi premium di supporto alla didattica formiti da ITHUM.
+
+
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
@@ -582,5 +596,9 @@
       </li>
     
     </ul>
+
+    <div>
+      * Alla conclusione del primo corso il docente potra' svolgere l'esame gratuitamente
+    </div>
   </div>
 </div>
