link codice etico

--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -54,7 +54,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         <br />
         <h4>Requisiti</h4>
         <ul  class='prtn-box-req-list'>
-            <li>Riconoscersi nel Codice Etico</li>
+            <li>Riconoscersi nel 
+              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            </li>
             <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
         </ul>
 
@@ -98,7 +100,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         <br />
         <h4>Requisiti</h4>
         <ul  class='prtn-box-req-list'>
-          <li>Riconoscersi nel Codice Etico</li>
+          <li>Riconoscersi nel 
+            <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+          </li>
           <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
           <li>Almeno 1 Certificato LPIC-1 (o superiore)</li>
         </ul>
@@ -146,7 +150,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           <br />
           <h4>Requisiti</h4>
           <ul  class='prtn-box-req-list'>
-            <li>Riconoscersi nel Codice Etico</li>
+            <li>Riconoscersi nel 
+              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            </li>
             <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
             <li>Almeno 2 Certificati LPI, di cui almeno uno LPIC-2</li>
           </ul>
@@ -363,7 +369,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
 
           <h4>Requisiti</h4>
           <ul>
-            <li>Riconoscersi nel Codice Etico</li>
+            <li>Riconoscersi nel 
+              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            </li>
             <li>1 docente certificato LPI Linux Essentials</li>
             <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
             <li>Connessione ad Internet</li>
@@ -408,7 +416,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             
             <h4>Requisiti</h4>
             <ul>
-              <li>Riconoscersi nel Codice Etico</li>
+              <li>Riconoscersi nel 
+                <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+              </li>
               <li>1 docente certificato LPI Linux Essentials</li>
               <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
               <li>Connessione ad Intenrnet</li>
