--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -5,8 +5,14 @@
     <section class='box-section'>
       <h1>Servizi e Soluzioni</h1>
       <p>
-      In questa sezione puoi trovare i nostri programmi di partnership dedicati alle aziende ed ai professionisti che erogano servizi in ambiente Linux ed Open Source.<br />
-      Attraverso i programmi LPI SP (Solution Provider), LPI CSP (Certified Solution Provider) e LPI CSP (Certified Solution Provider) Gold puoi essere trovato da nuovi clienti in base ai servizi che offri ed alle tue effetive competenze.
+      
+Se sei un'azienda che sviluppa software, progetta infrastrutture di rete o un rivenditore di soluzioni IT basate su Free and Open Source software puoi partecipare ai programmi Certified Solution Provider del Linux Professional Institute.<br><br>
+
+Con il programma CSP potrai ottenere una nuova visibilità, supportata dalla serietà del marchio di qualità LPI, rendendoti immediatamente riconoscibile dai potenziali clienti che potranno scegliere facilmente il loro prossimo partner, selezionando per competenze, company size e tipologia di clienti quotidianamente gestiti.
+Ci occupiamo di mantenere la banca dati sempre aggiornata, e certifichiamo le referenze dei lavori che hai effettuato.<br><br>
+
+Il "LPI Certified Solution Provider"è la scelta  giusta per tutte le aziende che operano nel business dell'ambiente Linux.
+Non perdere l'occasione di entrare a far parte di una delle comunità dedicate al Business Linux più importanti al mondo. Registrati oggi stesso come partner di LPI.
       </p>
     </section>
   </div>
@@ -33,20 +39,25 @@
         <div class='prtn-box-desc'>
 
         <p>
-        LPI SP (Service Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br>
+        Programma perfetto per tutte le aziende che lavorano con il Free Software, specializzate nei software più popolari.<br>
         </div>
         <h4>Benefit</h4>
         <ul class='prtn-box-bonus-list'>
             <li>Disponibilita' utilizzo logo LPI SP</li>
             <li>Profilo su LPI Italia Partners</li>
             <li>1 Location</li>
-            <li>3 Tag di indicizzazione competenze</li>
+            <li>5 Tag di indicizzazione competenze <br>
+                <small>(10€/anno per ogni competenza aggiuntiva)</small></li>
+            <li>2 Referenze pubblicate<br>
+             <small>(10€/UT per ogni referenza aggiuntiva)</small></li>
         </ul>
         <br />
         <h4>Requisiti</h4>
-        <ul>
-            <li>Riconoscersi nel Codice Etico</li>
-            <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie basate su Software Libero</li>
+        <ul  class='prtn-box-req-list'>
+            <li>Riconoscersi nel 
+              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            </li>
+            <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
         </ul>
 
         <div class='prtn-box-button-cont'>
@@ -71,7 +82,7 @@
         </div>
         <div class='prtn-box-desc'>
         <p>
-          LPI CSP (Certified Solution Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br />
+          Programma dedicato alle aziende che lavorano quotidianamente il Free Software, con compotenze approfondite, capaci di rispondere alle esigenze dei clienti più esigenti.
         </p>
           
         </div>
@@ -79,15 +90,21 @@
         <ul class='prtn-box-bonus-list'>
           <li>Disponibilita' utilizzo logo LPI CSP</li>
           <li>Profilo su LPI Italia Partners</li>
-          <li>2 Location</li>
-          <li>3 Tag di indicizzazione competenze</li>
-          <li>3 Referenze pubblicate</li>
+          <li>2 Location<br> 
+             <small>(50€/anno per ogni location aggiuntiva)</small></li>
+          <li>10 Tag di indicizzazione competenze <br>
+            <small>(10€/anno per ogni competenza aggiuntiva)</small></li>
+          <li>5 Referenze pubblicate 
+            <small>(10€/UT per ogni referenza aggiuntiva)</small></li>
         </ul>
         <br />
         <h4>Requisiti</h4>
-        <ul>
-          <li>Riconoscersi nel Codice Etico</li>
-          <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie basate su Software Libero</li>
+        <ul  class='prtn-box-req-list'>
+          <li>Riconoscersi nel 
+            <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+          </li>
+          <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
+          <li>Almeno 1 Certificato LPIC-1 (o superiore)</li>
         </ul>
 
         <div class='prtn-box-button-cont'>
@@ -112,16 +129,19 @@
 
         <div class='prtn-box-desc'>
           <p>
-          LPI CSP (Certified Solution Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br />
+          Programma dedicato alle aziende che lavorano quotidianamente il Free Software, con compotenze approfondite, capaci di rispondere alle esigenze dei clienti più esigenti.
           </p>
           <br>
           <h4>Benefit</h4>
           <ul class='prtn-box-bonus-list'>
             <li>Disponibilita' utilizzo logo LPI CSP-GOLD</li>
             <li>Profilo su LPI Italia Partners</li>
-            <li>10 Location</li>
-            <li>15 Tag di indicizzazione competenze</li>
-            <li>15 Referenze pubblicate</li>
+            <li>10 Location <br><small>(50€/anno per ogni location aggiuntiva)</small></li>
+            <li>25 Tag di indicizzazione competenze <br>
+              <small>(10€/anno per ogni competenza aggiuntiva)</small></li>
+            <li>15 Referenze pubblicate <br>
+              <small>(10€/UT per ogni referenza aggiuntiva)</small></li>
+            <li>Comunicato Stampa con citazioni dei CEO</li>
             <li>4 Post sulla pagina FaceBook di LPI Italia</li>
             <li>2 articoli/anno nella  newsletter  di LPI Italia</li>
             <li>Presenza a SMAU Milano: distribuzione materiali e inviti VIP</li>
@@ -129,9 +149,12 @@
           </ul>
           <br />
           <h4>Requisiti</h4>
-          <ul>
-            <li>Riconoscersi nel Codice Etico</li>
-            <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie basate su Software Libero</li>
+          <ul  class='prtn-box-req-list'>
+            <li>Riconoscersi nel 
+              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            </li>
+            <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
+            <li>Almeno 2 Certificati LPI, di cui almeno uno LPIC-2</li>
           </ul>
         </div>
         
@@ -139,12 +162,14 @@
           <a href="#signup/lpi-csp-gold" class="button">Aderisci ora</a>
         </div>
       </div>
+
     </li>
 
   </ul>
 
-  <div style='clear:both'></div>
 
+
+  <div style='clear:both'></div>
 
   </div>
 </div>
@@ -344,7 +369,9 @@
 
           <h4>Requisiti</h4>
           <ul>
-            <li>Riconoscersi nel Codice Etico</li>
+            <li>Riconoscersi nel 
+              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            </li>
             <li>1 docente certificato LPI Linux Essentials</li>
             <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
             <li>Connessione ad Internet</li>
@@ -389,7 +416,9 @@
             
             <h4>Requisiti</h4>
             <ul>
-              <li>Riconoscersi nel Codice Etico</li>
+              <li>Riconoscersi nel 
+                <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+              </li>
               <li>1 docente certificato LPI Linux Essentials</li>
               <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
               <li>Connessione ad Intenrnet</li>
